--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 # Include your project-specific ignores in this file
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
 assets/css/main.min.css.map
+*error_log*
