--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Include your project-specific ignores in this file
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
 assets/css/main.min.css.map
+assets/css/main.min.css
 *error_log*
