--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
 assets/css/main.min.css.map
 assets/css/main.min.css
+docs/*
 *error_log*
